[package]
name = "sp_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
rbs = "4.5.13"
rbdc = { version = "4.5.33", features = ["native-tls"] }
rbdc-mssql = { version = "4.5.4", default-features = true }
rbatis = "4.5.24"
dotenv = "0.15.0"
tokio = { version = "1.38.0", features = ["full"] }
native-tls = "0.2.8"

