[package]
name = "sp_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"  
dotenv = "0.15.0"
native-tls = "0.2.8"
rbatis = "4.5.24"
rbdc = { version = "4.5.33", features = ["native-tls"] }
rbdc-mssql = { version = "4.5.4", default-features = true }
rbs = "4.5.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3"
indexmap = "2.2.6"
jsonwebtoken = "9.3.0"
chrono = "0.4"
